syntax = "proto3";

option csharp_namespace = "Proto.Command.StatisticsData";

import "DTO/trace_data.proto";

service StatisticsDataCommandProtoService {
  rpc ChangeProductivity (ChangeProductivityCommandProto) returns (CommandResponse);
  rpc ChangeTagSelection (ChangeTagSelectionCommandProto) returns (CommandResponse);
  rpc CreateStatisticsData (CreateStatisticsDataCommandProto) returns (CommandResponse);
}

message ChangeProductivityCommandProto {
  string statisticsDataId = 1;
  bool isProductive = 2;
  bool isNeutral = 3;
  bool isUnproductive = 4;
  TraceDataProto traceData = 5;
}

message ChangeTagSelectionCommandProto {
  string statisticsDataId = 1;
  repeated string selectedTagIds = 2;
  TraceDataProto traceData = 3;
}

message CreateStatisticsDataCommandProto {
  string statisticsDataId = 1;
  bool isProductive = 2;
  bool isNeutral = 3;
  bool isUnproductive = 4;
  repeated string tagIds = 5;
  string timeSlotId = 6;
  TraceDataProto traceData = 7;
}

message CommandResponse {
  bool success = 1;
}
